--- a/Librarian/src/main/resources/application.properties
+++ b/Librarian/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## PostgreSQL
 server.port=9595
-spring.datasource.url=jdbc:postgresql://localhost:5432/book_store
+spring.datasource.url=jdbc:postgresql://db:5432/book_store
 spring.datasource.username=postgres
 spring.datasource.password=newPassword
 
