--- a/Librarian/frontend/lab2-librarian/package.json
+++ b/Librarian/frontend/lab2-librarian/package.json
@@ -17,10 +17,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
-    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
     "redux-saga-routines": "^3.1.3",
+    "sass": "^1.45.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
